--- a/rxsample/src/main/res/values/strings.xml
+++ b/rxsample/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">RxMoviper Sample</string>
+    <string name="data_loading_error">Data loading error</string>
+    <string name="email">Email:</string>
+    <string name="location">Location:</string>
+    <string name="blog">Blog:</string>
+    <string name="company">Company:</string>
+    <string name="name">Name:</string>
+
+    <string name="example_url">http://github.com/user/login</string>
+    <string name="example_login">Login</string>
+    <string name="example_name">Funny Name</string>
+    <string name="example_company">Funny company</string>
+    <string name="example_blog">http://funnyBlog.com</string>
+    <string name="example_location">Warsaw, Poland</string>
+    <string name="example_email">funny@email.com</string>
 </resources>
